# security_security_guard

./: BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  hisysevent.yaml  ohos.build  security_guard.gni
frameworks/common/classify/: BUILD.gn  sg_classify_sdk.map
frameworks/common/collect/: BUILD.gn  sg_collect_sdk.map
frameworks/common/task/: BUILD.gn
frameworks/common/task_handler/: BUILD.gn
frameworks/js/napi/: BUILD.gn  napi_request_data_manager.cpp  napi_request_data_manager.h  napi_security_event_querier.cpp  napi_security_event_querier.h  security_guard_napi.cpp  security_guard_napi.h  security_guard_sdk_adaptor.cpp  security_guard_sdk_adaptor.h
interfaces/inner_api/collector/: BUILD.gn
interfaces/kits/c/: BUILD.gn  libsecurityguard.ndk.json
oem_property/: BUILD.gn
oem_property/hos/: config_update_trust_list.json  real_time_upload_event.cfg  real_time_upload_event.json  security_audit.cfg  security_guard_event.cfg  security_guard_event.json  security_guard_event_group.json  security_guard_model.cfg
seccomp_policy/: BUILD.gn  security_collector.seccomp.policy
services/bigdata/: BUILD.gn
services/bigdata/include/: bigdata.h
services/bigdata/src/: bigdata.cpp
services/collector_manager/: BUILD.gn
services/collector_manager/include/: collector_cfg_marshalling.h  data_collection.h
services/collector_manager/src/: collector_cfg_marshalling.cpp  data_collection.cpp  lib_loader.cpp
services/collectors/dns_event/: BUILD.gn
services/config_manager/: BUILD.gn  sg_config_manager.map
services/config_manager/include/: app_info_rdb_helper.h  config_data_manager.h  config_database_helper.h  config_define.h  config_manager.h  config_subscriber.h  event_config.h  local_app_config.h  model_analysis_define.h  model_cfg_marshalling.h  model_config.h
services/config_manager/src/: app_info_rdb_helper.cpp  base_config.cpp  config_data_manager.cpp  config_database_helper.cpp  config_manager.cpp  config_operator.cpp  config_subscriber.cpp  event_config.cpp  event_group_config.cpp  global_app_config.cpp  interface.cpp  local_app_config.cpp  model_cfg_marshalling.cpp  model_config.cpp
services/data_collect/: BUILD.gn  sg_collect_service.map
services/data_collect/idl/: BUILD.gn  DataCollectManagerIdl.idl
services/data_collect/sa/: acquire_data_callback_proxy.cpp  acquire_data_callback_proxy.h  acquire_data_subscribe_manager.cpp  data_collect_manager_callback_proxy.cpp  data_collect_manager_service.cpp  data_collect_manager_service.h  data_collect_manager_stub.cpp  data_collect_manager_stub.h  data_format.cpp  security_event_query_callback_proxy.cpp
services/kernel_collector/: BUILD.gn
services/kernel_collector/include/: kernel_collector.h
services/kernel_collector/src/: interface.cpp  kernel_collector.cpp
services/model_analysis/: BUILD.gn
services/model_analysis/include/: data_mgr_cfg.h  event_config.h  model_analysis.h  model_analysis_define.h  model_cfg_marshalling.h  model_config.h  threat_config.h
services/model_analysis/src/: data_mgr_cfg.cpp  event_config.cpp  model_analysis.cpp  model_cfg_marshalling.cpp  model_config.cpp  threat_config.cpp
services/real_time_detect/: BUILD.gn  real_time_detect_callback_proxy.cpp  real_time_detect_service.cpp  real_time_detect_stub.cpp
services/real_time_detect/include/: real_time_detect_callback_proxy.h  real_time_detect_service.h  real_time_detect_stub.h
services/risk_classify/: BUILD.gn  sg_classify_service.map
services/risk_classify/idl/: BUILD.gn  RiskAnalysisManager.idl
services/risk_classify/include/: i_risk_analysis_manager.h  model_manager.h  risk_analysis.h  risk_analysis_define.h  risk_analysis_manager_callback_proxy.h  risk_analysis_manager_service.h  risk_analysis_manager_stub.h  risk_analysis_model.h
services/risk_classify/model_library/: BUILD.gn
services/risk_classify/model_manager/: BUILD.gn
services/risk_classify/src/: model_manager.cpp  risk_analysis.cpp  risk_analysis_manager_callback_proxy.cpp  risk_analysis_manager_service.cpp  risk_analysis_manager_stub.cpp  risk_analysis_model.cpp
services/risk_collect/: BUILD.gn
services/risk_collect/include/: base_event_id.h  base_event_id_storage.h  data_collect_manager_callback_proxy.h  data_collect_manager_service.h  data_collect_manager_stub.h  data_format.h  data_manager.h  data_manager_wrapper.h  data_storage.h  database.h  database_manager.h  database_wrapper.h  i_data_collect_manager.h  risk_collect_define.h  uevent_listener.h  uevent_listener_impl.h  uevent_notify.h
services/risk_collect/src/: data_collect_manager_callback_proxy.cpp  data_collect_manager_service.cpp  data_collect_manager_stub.cpp  data_format.cpp  kernel_interface_adapter.cpp  uevent_listener.cpp  uevent_listener_impl.cpp  uevent_notify.cpp
services/security_collector/: BUILD.gn  security_collector_service.map
services/security_collector/include/: data_collection.h  security_collector_manager_service.h  security_collector_manager_stub.h  security_collector_run_manager.h  security_collector_subscriber.h  security_collector_subscriber_manager.h
services/security_collector/src/: collector_cfg_marshalling.cpp  data_collection.cpp  lib_loader.cpp  security_collector_manager_callback_proxy.cpp  security_collector_manager_service.cpp  security_collector_manager_stub.cpp  security_collector_run_manager.cpp  security_collector_subscriber_manager.cpp
test/: BUILD.gn
test/fuzztest/classify/: BUILD.gn
test/fuzztest/collect/: BUILD.gn
test/fuzztest/config_manager/: BUILD.gn
test/fuzztest/data_collect/: BUILD.gn
test/fuzztest/inner_sdk/: BUILD.gn
test/fuzztest/ipc/: BUILD.gn
test/fuzztest/obtaindata/: BUILD.gn
test/fuzztest/risk_collect/: BUILD.gn
test/fuzztest/security_collector/: BUILD.gn
test/unittest/: BUILD.gn  security_guard_test.cpp  security_guard_test.h
test/unittest/config_manager/: BUILD.gn
test/unittest/data_collect/: BUILD.gn
test/unittest/inner_api/: BUILD.gn
test/unittest/model_manager/: BUILD.gn
test/unittest/risk_classify/: BUILD.gn
test/unittest/risk_collect/: BUILD.gn
(+601 files in other folders)
