# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("security_guard_cfg") {
  source = "hos/security_guard.cfg"
  module_install_dir = ""

  subsystem_name = "security"
  part_name = "security_guard"
}

ohos_prebuilt_etc("security_guard_model_cfg") {
  source = "hos/security_guard_model.cfg"
  module_install_dir = ""

  subsystem_name = "security"
  part_name = "security_guard"
}

ohos_prebuilt_etc("security_guard_event_cfg") {
  source = "hos/security_guard_event.cfg"
  module_install_dir = ""

  subsystem_name = "security"
  part_name = "security_guard"
}

ohos_prebuilt_etc("security_audit_cfg") {
  source = "hos/security_audit.cfg"
  module_install_dir = ""

  subsystem_name = "security"
  part_name = "security_guard"
}
