# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/init/services/modules/seccomp/scripts/seccomp_policy_fixer.gni")

ohos_prebuilt_seccomp("security_collector_seccomp_filter") {
    sources = [ "security_collector.seccomp.policy" ]

    filtername = "security_collector"

    process_type = "system"

    part_name = "security_guard"
    subsystem_name = "security"

    install_enable = true
    install_images = [ "system" ]
}