# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_guard/security_guard.gni")
import("//build/ohos.gni")
import("//build/test.gni")

group("security_guard_build_module_test") {
  testonly = true
  deps = []
  if (is_standard_system) {
    deps += [
      "${sg_root_dir}/interfaces/inner_api/classify/test:unittest",
      "${sg_root_dir}/interfaces/inner_api/collect/test:unittest",
      "${sg_root_dir}/interfaces/inner_api/obtaindata/test:unittest",
    ]
  }
}

group("security_guard_fuzz_test") {
  testonly = true
  deps = []
  if (is_standard_system) {
    deps += [
      "${sg_root_dir}/test/fuzztest/classify:fuzztest",
      "${sg_root_dir}/test/fuzztest/collect:fuzztest",
      "${sg_root_dir}/test/fuzztest/ipc:fuzztest",
      "${sg_root_dir}/test/fuzztest/obtaindata:fuzztest",
    ]
  }
}

group("security_guard_unit_test") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "${sg_root_dir}/test/unittest/config_manager:unittest",
      "${sg_root_dir}/test/unittest/data_collect:data_collect_test",
      "${sg_root_dir}/test/unittest/data_collect:unittest",
      "${sg_root_dir}/test/unittest/risk_classify:unittest",
      "${sg_root_dir}/test/unittest/security_collector:security_collector_test",
      "${sg_root_dir}/test/unittest/security_collector:unittest",
    ]
  }
}
