# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_guard/security_guard.gni")
import("//build/ohos.gni")

ohos_shared_library("sg_config_manager") {
  subsystem_name = "security"
  part_name = "security_guard"

  version_script = "sg_config_manager.map"

  configs = [ "${sg_root_dir}/resource/config/build:coverage_flags" ]

  include_dirs = [
    "${sg_root_dir}/services/config_manager/include",
    "${sg_root_dir}/frameworks/common/constants/include",
    "${sg_root_dir}/frameworks/common/json/include",
    "${sg_root_dir}/frameworks/common/log/include",
    "${sg_root_dir}/frameworks/common/utils/include",
    "${sg_root_dir}/services/bigdata/include",
    "${sg_root_dir}/services/data_collect/store/include",
  ]

  sources = [
    "${sg_root_dir}/frameworks/common/json/src/json_cfg.cpp",
    "${sg_root_dir}/frameworks/common/utils/src/security_guard_utils.cpp",
    "${sg_root_dir}/services/config_manager/src/app_info_rdb_helper.cpp",
    "${sg_root_dir}/services/config_manager/src/base_config.cpp",
    "${sg_root_dir}/services/config_manager/src/config_data_manager.cpp",
    "${sg_root_dir}/services/config_manager/src/config_database_helper.cpp",
    "${sg_root_dir}/services/config_manager/src/config_manager.cpp",
    "${sg_root_dir}/services/config_manager/src/config_operator.cpp",
    "${sg_root_dir}/services/config_manager/src/config_subscriber.cpp",
    "${sg_root_dir}/services/config_manager/src/event_config.cpp",
    "${sg_root_dir}/services/config_manager/src/global_app_config.cpp",
    "${sg_root_dir}/services/config_manager/src/local_app_config.cpp",
    "${sg_root_dir}/services/config_manager/src/model_cfg_marshalling.cpp",
    "${sg_root_dir}/services/config_manager/src/model_config.cpp",
  ]

  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  stack_protector_ret = true

  deps = [
    "${sg_root_dir}/services/bigdata:sg_bigdata_stamp",
    "${sg_root_dir}/services/data_collect:sg_collect_service_database",
  ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "relational_store:native_rdb",
  ]
}
