# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_guard/security_guard.gni")
import("//build/ohos.gni")

ohos_shared_library("sg_collect_service") {
  subsystem_name = "security"
  part_name = "security_guard"
  version_script = "sg_collect_service.map"

  configs = [
    "${sg_root_dir}/services/risk_classify:security_guard_model_configs",
    "${sg_root_dir}/resource/config/build:coverage_flags",
  ]

  include_dirs = [
    "${sg_root_dir}/interfaces/inner_api/collect/include",
    "${sg_root_dir}/interfaces/inner_api/collector/include",
    "${sg_root_dir}/interfaces/inner_api/obtaindata/include",
    "${sg_root_dir}/interfaces/inner_api/common/include",
    "${sg_root_dir}/interfaces/inner_api/data_collect_manager/include",
    "${sg_root_dir}/interfaces/inner_api/classify/include",
    "${sg_root_dir}/services/bigdata/include",
    "${sg_root_dir}/services/config_manager/include",
    "${sg_root_dir}/services/data_collect/sa/include",
    "${sg_root_dir}/services/data_collect/store/include",
    "${sg_root_dir}/frameworks/common/constants/include",
    "${sg_root_dir}/frameworks/common/json/include",
    "${sg_root_dir}/frameworks/common/task_handler/include",
    "${sg_root_dir}/frameworks/common/database/include",
    "${sg_root_dir}/frameworks/common/log/include",
    "${sg_root_dir}/frameworks/common/utils/include",
    "${sg_root_dir}/services/security_collector/include",
    "${sg_root_dir}/services/risk_classify/model_manager/include",
  ]

  sources = [
    "${sg_root_dir}/frameworks/common/collector/src/security_collector_subscribe_info.cpp",
    "${sg_root_dir}/frameworks/common/json/src/json_cfg.cpp",
    "${sg_root_dir}/frameworks/common/utils/src/security_guard_utils.cpp",
    "${sg_root_dir}/services/data_collect/sa/acquire_data_callback_proxy.cpp",
    "${sg_root_dir}/services/data_collect/sa/acquire_data_subscribe_manager.cpp",
    "${sg_root_dir}/services/data_collect/sa/data_collect_manager_callback_proxy.cpp",
    "${sg_root_dir}/services/data_collect/sa/data_collect_manager_service.cpp",
    "${sg_root_dir}/services/data_collect/sa/data_collect_manager_stub.cpp",
    "${sg_root_dir}/services/data_collect/sa/data_format.cpp",
    "${sg_root_dir}/services/data_collect/sa/security_event_query_callback_proxy.cpp",
    "${sg_root_dir}/services/data_collect/store/src/database_helper.cpp",
    "${sg_root_dir}/services/data_collect/store/src/database_manager.cpp",
    "${sg_root_dir}/services/data_collect/store/src/risk_event_rdb_helper.cpp",
    "${sg_root_dir}/services/security_collector/src/collector_cfg_marshalling.cpp",
    "${sg_root_dir}/services/security_collector/src/data_collection.cpp",
    "${sg_root_dir}/services/security_collector/src/lib_loader.cpp",
  ]

  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  deps = [
    "${sg_root_dir}/frameworks/common/collect:libsg_collect_sdk",
    "${sg_root_dir}/frameworks/common/collector:libsg_collector_sdk",
    "${sg_root_dir}/services/bigdata:sg_bigdata_stamp",
    "${sg_root_dir}/services/config_manager:sg_config_manager",
    "${sg_root_dir}/services/data_collect:sg_collect_service_database",
    "${sg_root_dir}/services/risk_classify/model_manager:sg_model_manager_stamp",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hisysevent:libhisyseventmanager",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_shared_library("sg_collect_service_database") {
  subsystem_name = "security"
  part_name = "security_guard"

  configs = [
    "${sg_root_dir}/services/risk_classify:security_guard_model_configs",
    "${sg_root_dir}/resource/config/build:coverage_flags",
  ]

  include_dirs = [
    "${sg_root_dir}/frameworks/common/database/include",
    "${sg_root_dir}/frameworks/common/log/include",
    "${sg_root_dir}/services/data_collect/store/include",
    "${sg_root_dir}/interfaces/inner_api/data_collect_manager/include",
    "${sg_root_dir}/interfaces/inner_api/classify/include",
  ]

  sources = [
    "${sg_root_dir}/services/data_collect/store/src/database.cpp",
    "${sg_root_dir}/services/data_collect/store/src/rdb_event_store_callback.cpp",
  ]

  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  deps = []

  external_deps = [
    "hilog:libhilog",
    "relational_store:native_rdb",
  ]
}
