# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_guard/security_guard.gni")
import("//build/ohos.gni")

ohos_shared_library("kernel_collector_sg") {
  subsystem_name = "security"
  part_name = "security_guard"

  include_dirs = [
    "//third_party/json/include",
    "${sg_root_dir}/frameworks/common/interfaces",
    "${sg_root_dir}/interfaces/inner_api/collector/include",
    "${sg_root_dir}/services/kernel_collector/include",
    "${sg_root_dir}/frameworks/common/log/include",
    "${sg_root_dir}/frameworks/common/constants/include",
    "${sg_root_dir}/frameworks/common/json/include",
  ]

  sources = [
    "${sg_root_dir}/frameworks/common/json/src/json_cfg.cpp",
    "${sg_root_dir}/services/kernel_collector/src/interface.cpp",
    "${sg_root_dir}/services/kernel_collector/src/kernel_collector.cpp",
  ]

   deps = [
    "${sg_root_dir}/interfaces/inner_api/collect:libsg_collect_sdk",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "device_manager:devicemanagersdk",
    "hisysevent:libhisysevent",
    "hisysevent:libhisyseventmanager",
    "hilog:libhilog",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "preferences:native_preferences",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}
