# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_guard/security_guard.gni")
import("//build/ohos.gni")

ohos_shared_library("sg_classify_service") {
  subsystem_name = "security"
  part_name = "security_guard"

  include_dirs = [
    "//third_party/json/include",
    "${sg_root_dir}/services/bigdata/include",
    "${sg_root_dir}/interfaces/inner_api/classify/include",
    "${sg_root_dir}/services/model_analysis/include",
    "${sg_root_dir}/services/risk_classify/include",
    "${sg_root_dir}/services/risk_collect/include",
    "${sg_root_dir}/frameworks/common/database/include",
    "${sg_root_dir}/frameworks/common/log/include",
    "${sg_root_dir}/frameworks/common/constants/include",
    "${sg_root_dir}/frameworks/common/task_handler/include",
    "${sg_root_dir}/frameworks/common/utils/include",
    "${sg_root_dir}/frameworks/common/interfaces",
  ]

  sources = [
    "${sg_root_dir}/frameworks/common/utils/src/security_guard_utils.cpp",
    "${sg_root_dir}/services/risk_classify/src/model_manager.cpp",
    "${sg_root_dir}/services/risk_classify/src/risk_analysis_manager_callback_proxy.cpp",
    "${sg_root_dir}/services/risk_classify/src/risk_analysis_manager_service.cpp",
    "${sg_root_dir}/services/risk_classify/src/risk_analysis_manager_stub.cpp",
    "${sg_root_dir}/services/risk_classify/src/risk_analysis_model.cpp",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  deps = [
    "${sg_root_dir}/frameworks/common/task_handler:sg_task_stamp",
    "${sg_root_dir}/services/bigdata:sg_bigdata_stamp",
    "${sg_root_dir}/services/model_analysis:sg_model_analysis",
    "${sg_root_dir}/services/risk_collect:sg_collect_service",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}
